input_bgのurlがちがっていたので修正
git-svn-id: http://svn.coderepos.org/share/websites/events.php.gr.jp/branches/cake@19081 d0d07461-0603-4401-acd4-de1884942a52

--- a/app/webroot/css/phpgrjp.css
+++ b/app/webroot/css/phpgrjp.css
@@ -211,7 +211,7 @@ input, textarea, select {
     margin: 5px auto;
     padding: 4px;
     background-color: #DAE3F5;
-    background-image: url("images/input_bg.png");
+    background-image: url("./phpgrjp/images/input_bg.png");
     background-repeat: no-repeat;
     background-position: left top;
 }
