--- a/app/webroot/css/phpgrjp.css
+++ b/app/webroot/css/phpgrjp.css
@@ -368,6 +368,14 @@ div#comments div.section p{
   margin-bottom: 10px;
 	border-bottom: 1px dashed #B5D6FF;
 }
+
+.twitter-error {
+  text-align: left;
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-bottom: 30px;
+  color:#FF0000;
+}
 /* header */
 
 #header {
